--- a/Atividade/itens_listagem_atividades.html
+++ b/Atividade/itens_listagem_atividades.html
@@ -1,8 +1,10 @@
-<tr><td><a href='index.php?id={id}'>{id}</a></td>
-<td>{descricao}</td>
-<td>{peso}</td>
-<td>{anexo}</td>
-<td>{tipo}</td>
-<td>{disciplina}</td>
-<td>{recuperacao}</td>
-<td>{equipe}</td></tr>
+<tr>
+    <td><a href='index.php?id={id}'>{id}</a></td>
+    <td>{descricao}</td>
+    <td>{peso}</td>
+    <td>{anexo}</td>
+    <td>{tipo}</td>
+    <td>{disciplina}</td>
+    <td>{recuperacao}</td>
+    <td>{equipe}</td>
+</tr>
