Melhoria visual nas atividades
Separação de cadastro e listagem de atividades

--- a/Atividade/form_cad_atividade.html
+++ b/Atividade/form_cad_atividade.html
@@ -6,8 +6,7 @@
     <title>Cadastro de Atividades</title>
 </head>
 <body>
-    <h1>Manutenção de Atividades</h1>
-    Adicionar atividades
+    <h1>Adicionar Atividades</h1>
     <form action="index.php" method="post" enctype="multipart/form-data">
         <fieldset>
             <legend>Formulário</legend>
@@ -49,6 +48,5 @@
             <input type="reset" value="Cancelar">
         </fieldset>
     </form>
-<script src="filtro.js"></script>
 </body>
 </html>
