--- a/Usuario/itens_listagem_usuarios.html
+++ b/Usuario/itens_listagem_usuarios.html
@@ -1,6 +1,8 @@
-<tr><td><a href='index.php?id={id}'>{id}</a></td>
-<td>{nome}</td>
-<td>{email}</td>
-<td>{senha}</td>
-<td>{matricula}</td>
-<td>{contato}</td></tr>
+<tr>
+    <td><a href='index.php?id={id}'>{id}</a></td>
+    <td>{nome}</td>
+    <td>{email}</td>
+    <td>{senha}</td>
+    <td>{matricula}</td>
+    <td>{contato}</td>
+</tr>
