--- a/Disciplina/form_cad_disciplina.html
+++ b/Disciplina/form_cad_disciplina.html
@@ -6,15 +6,18 @@
     <title>Cadastro de Disciplina</title>
 </head>
 <body>
-    <h1>Manutenção de Atividades</h1>
+    <h1>Adicionar Disciplinas</h1>
     <form action="index.php" method="post" enctype="multipart/form-data">
         <fieldset>
             <legend>Formulário</legend>
-            <label for="id">Id:</label>
-            <input type="text" name="id" readonly value={id}>
+
+            <label for="id" hidden>Id:</label>
+            <input type="text" name="id" readonly value={id} hidden>
+
             <label for="nome">Nome:</label>
             <input type="text" name="nome"  value={nome}>
-      
+            <br><br>
+            
             <button type="submit" name="acao" value="salvar">Salvar</button>
             <button type="submit" name="acao" value="excluir">Excluir</button>
             <input type="reset" value="Cancelar">
