Criação das classes Aluno e Professor
Criação da classe Aluno
Criação da classe Professor
Alteração na classe Usuário
Alteração na classe Disciplina para incluir o id do professor
Alteração no formulário de cadastro de disciplina para incluir o professor
Alteração no banco de dados para incluir a relação (1:N) entre disciplina e professor

--- a/Disciplina/form_cad_disciplina.html
+++ b/Disciplina/form_cad_disciplina.html
@@ -17,6 +17,10 @@
             <label for="nome">Nome:</label>
             <input type="text" name="nome"  value={nome}>
             <br><br>
+
+            <label for="idProfessor">Professor:</label>
+            {professor}
+            <br><br>
             
             <button type="submit" name="acao" value="salvar">Salvar</button>
             <button type="submit" name="acao" value="excluir">Excluir</button>
