--- a/Usuario/listagem_usuario.html
+++ b/Usuario/listagem_usuario.html
@@ -27,6 +27,9 @@
     <th>Senha</th>
     <th>Matrícula</th>
     <th>Contato</th>
+    <th>Tipo</th>
+    <th>Salário</th>
+    <th>Nome do Responsável</th>
     {itens}
 </table>
 
