--- a/Usuario/itens_listagem_usuarios.html
+++ b/Usuario/itens_listagem_usuarios.html
@@ -5,4 +5,7 @@
     <td>{senha}</td>
     <td>{matricula}</td>
     <td>{contato}</td>
+    <td>{tipo}</td>
+    <td>{salario}</td>
+    <td>{nomeResponsavel}</td>
 </tr>
