--- a/Atividade/form_cad_atividade.html
+++ b/Atividade/form_cad_atividade.html
@@ -16,18 +16,18 @@
             <br><br>
             
             <label for="id" hidden>Id:</label>
-            <input type="text" name="id" readonly value={id} hidden>
+            <input type="text" name="id" readonly value="{id}" hidden>
 
             <label for="descricao">Descricao:</label>
-            <input type="text" name="descricao" value={descricao} required>
+            <input type="text" name="descricao" value="{descricao}" required>
             <br><br>
 
             <label for="peso">Peso:</label>
-            <input type="text" name="peso" value={peso} required>
+            <input type="text" name="peso" value="{peso}" required>
             <br><br>
 
             <label for="anexo">Anexo:</label>
-            <input type="file" name="anexo" value={anexo} required>
+            <input type="file" name="anexo" value="{anexo}" required>
             <br><br>
 
             <label for="tipo">Tipo:</label>
