Correção do cadastro de Disciplina
Alteração na classe Usuario para permitir filtro por tipo de usuário
Alteração no formulário de cadastro de Disciplina para corrigir a seleção do professor
Alteração no arquivo index.php da Disciplina para corrigir a seleção do professor

--- a/Disciplina/form_cad_disciplina.html
+++ b/Disciplina/form_cad_disciplina.html
@@ -15,7 +15,7 @@
             <input type="text" name="id" readonly value={id} hidden>
 
             <label for="nome">Nome:</label>
-            <input type="text" name="nome"  value={nome}>
+            <input type="text" name="nome"  value="{nome}" required>
             <br><br>
 
             <label for="idProfessor">Professor:</label>
