Separação na listagem de Usuários
Alteração nas classes Aluno e Professor.class.php para utilização do atributo tipo no insert na tabela do banco de dados
Alteração do nome do script filtro.js para lista disciplina.js para Disciplina
Alteração da lógica para redirecionar (após o cadastro de um usuário) para a lista de usuários
Criação de dois templates de tabelas específicos para listagem de alunos e professores
Alteração do html da listagem de usuários para separar as tabelas de Alunos e Professores
Alteração da lógica de busca da listagem de usuários para incluir qual tipo de usuário você quer buscar

--- a/Disciplina/listagem_disciplina.html
+++ b/Disciplina/listagem_disciplina.html
@@ -34,6 +34,6 @@
         {itens}
     </div>
 
-    <script src="filtro.js"></script>
+    <script src="lista_disciplina.js"></script>
 </body>
 </html>
