--- a/Disciplina/form_cad_disciplina.html
+++ b/Disciplina/form_cad_disciplina.html
@@ -12,7 +12,7 @@
             <legend>Formulário</legend>
 
             <label for="id" hidden>Id:</label>
-            <input type="text" name="id" readonly value={id} hidden>
+            <input type="text" name="id" readonly value="{id}" hidden>
 
             <label for="nome">Nome:</label>
             <input type="text" name="nome"  value="{nome}" required>
